feat: send request to backend

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,13 +1,13 @@
 name: surgical_counting
-description: "A new Flutter project."
+description: "CUHK HCK2303"
 
 # Prevent accidental publishing to pub.dev.
-publish_to: 'none'
+publish_to: "none"
 
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.6 <4.0.0'
+  sdk: ">=3.2.6 <4.0.0"
 
 dependencies:
   camera: ^0.10.5+9
@@ -16,6 +16,7 @@ dependencies:
   flutter_localizations:
     sdk: flutter
   getwidget: ^4.0.0
+  http: ^1.2.0
   path: ^1.8.3
   path_provider: ^2.1.2
 
